# caravan-backend

./: .env.sample  .gitignore  compose.yml  pyproject.toml
src/app/domain/caravan/: models.py  serializers.py  urls.py  views.py
src/app/domain/caravan/migrations/: 0001_initial.py
src/app/domain/event/: models.py  views.py
src/app/domain/event/migrations/: 0001_initial.py
src/app/domain/vehicle/: models.py
src/app/domain/vehicle/migrations/: 0001_initial.py
src/app/shared/models/: describable.py  location.py  timestamped.py
src/app/shared/validators/: address.py
src/config/: settings.py  urls.py  wsgi.py
test/: conftest.py
test/domain/: test_caravan.py
test/domain/caravan/: test_caravan.py  test_caravan_member.py
test/support/factories/: caravan_factory.py  event_factory.py  user_factory.py  vehicle_factory.py
