[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0a1",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.12.0",
    "django-filter>=25.1",
    "djangorestframework>=3.16.1",
    "djoser>=2.3.3",
    "drf-spectacular>=0.28.0",
    "markdown>=3.9",
    "psycopg[binary,pool]>=3.2.10",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "pytest-django>=4.11.1",
    "ruff>=0.13.1",
    "taskipy>=1.14.1",
]
[tool.taskipy.tasks]
test = "pytest --confcutdir=src"
lint = "ruff check; ruff format"
